clusters/homelab/apps/deluge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  annotations:
    homelab.rst.io/privileged-namespace-justification: Deluge VPN Pods require /dev/net/tun access for WireGuard.
  labels:
    app.kubernetes.io/name: media
    app.kubernetes.io/part-of: homelab
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
