clusters/homelab/apps/deluge/staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deluge
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
  labels:
    app.kubernetes.io/name: deluge
    app.kubernetes.io/part-of: homelab
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
